WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270523
REGRESSION (
275491@main
): [ iOS Debug ] 2x TestWebKitAPI.WKWebView.PrintToPDFUsingPrint API tests are constant crashes
https://bugs.webkit.org/show_bug.cgi?id=270523
Summary
REGRESSION (275491@main): [ iOS Debug ] 2x TestWebKitAPI.WKWebView.PrintToPDF...
Jay Stfleur
Reported
2024-03-05 09:47:36 PST
Description: TestWebKitAPI.WKWebView.PrintToPDFUsingPrintPageRenderer TestWebKitAPI.WKWebView.PrintToPDFUsingPrintInteractionControllerAndPrintPageRenderer are constant crashes on iOS Debug. History:
https://results.webkit.org/?limit=50000&platform=ios&style=debug&suite=api-tests&suite=api-tests&test=TestWebKitAPI.WKWebView.PrintToPDFUsingPrintPageRenderer&test=TestWebKitAPI.WKWebView.PrintToPDFUsingPrintInteractionControllerAndPrintPageRenderer
Diff/Image Diff/Crash Log: ASSERTION FAILED: !isAsyncReplyHandlerWithDispatcher(replyID) /Volumes/Data/worker/Apple-iOS-17-Simulator-Debug-Build/build/Source/WebKit/Platform/IPC/Connection.h(777) : Error IPC::Connection::waitForAsyncReplyAndDispatchImmediately(AsyncReplyID, Timeout) [T = Messages::WebPage::DrawToPDFiOS] Child process terminated with signal 5: Trace/BPT trap
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-03-05 09:51:45 PST
<
rdar://problem/124076626
>
Jay Stfleur
Comment 2
2024-03-05 09:59:44 PST
Reproducibility: run-api-tests --root --ios-simulator --debug -v TestWebKitAPI.WKWebView.PrintToPDFUsingPrintPageRenderer run-api-tests --root --ios-simulator --debug -v TestWebKitAPI.WKWebView.PrintToPDFUsingPrintInteractionControllerAndPrintPageRenderer
Jean-Yves Avenard [:jya]
Comment 3
2024-03-05 23:09:38 PST
Pull request:
https://github.com/WebKit/WebKit/pull/25524
EWS
Comment 4
2024-03-06 01:28:51 PST
Committed
275733@main
(c9cfcceff6a7): <
https://commits.webkit.org/275733@main
> Reviewed commits have been landed. Closing PR #25524 and removing active labels.
Alexey Proskuryakov
Comment 5
2024-03-11 15:21:22 PDT
***
Bug 270546
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug