REGRESSION (275491@main): [ iOS Debug ] 2x TestWebKitAPI.WKWebView.PrintToPDFUsingPrint API tests are constant crashes https://bugs.webkit.org/show_bug.cgi?id=270523 rdar://124076626

Reviewed by Aditya Keerthi.

In 275494@main, HashMap::isValidKey was used to check if the map contained the key. This is obviously incorrect.
Use HashMap::contains instead.

* Source/WebKit/Platform/IPC/Connection.cpp:
(IPC::Connection::isAsyncReplyHandlerWithDispatcher):
(IPC::Connection::takeAsyncReplyHandlerWithDispatcherWithLockHeld): Similar to taskReplyHandler, check if the key is valid first.

Canonical link: https://commits.webkit.org/275733@main